[tool.poetry]
name = "yt"
version = "0.1.0"
description = "Youtube stuff"
authors = ["Anton Shyshko <pozernishku@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
jmespath = "^1.0.1"
youtube-dl = "^2021.12.17"
requests = "^2.27.1"


[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
